# axum-webserver-template

./: .envrc  Cargo.toml  flake.nix
.github/workflows/: check.yaml
src/: config.rs  main.rs
